version/0.16/_sources/api/solver/_autosummary/settings/models_1.rst.txt
:orphan:

.. _models_1:

models
======

.. autoclass:: ansys.fluent.core.solver.settings_232.models_1.models
    :show-inheritance:

.. rubric:: Attributes

================================================   ==============================================================================================================================================================================================================

Attribute                                                                                                                                                                                                                                                 Summary

================================================   ==============================================================================================================================================================================================================
:ref:`multiphase <multiphase>`                                                                                                                                                                                                                'multiphase' child.

:ref:`energy <energy>`                                                                                                                                                                                                 Enter the energy transport model settings.

:ref:`viscous <viscous>`                                                                                                                                                                                                                         'viscous' child.

:ref:`radiation <radiation>`                                                                                                                                                                                                                   'radiation' child.

:ref:`species <species>`                                                                                                                                                                                                                         'species' child.

:ref:`discrete_phase <discrete_phase>`                 Toplevel menu of the Discrete Phase multiphase model. A discrete phase model (DPM) is used when the aim is to investigate the behavior of the particles from a Lagrangian view and a discrete perspective.

:ref:`virtual_blade_model <virtual_blade_model>`                                                                                                                                                                                        Enter the vbm model menu.

:ref:`optics <optics>`                                                                                                                                                                                                               Enter the optics model menu.

:ref:`structure <structure>`                                                                                                                                                                                                                   'structure' child.

:ref:`ablation <ablation>`                                                                                                                                                                                                                      'ablation' child.

================================================   ==============================================================================================================================================================================================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

