version/0.20/_sources/api/solver/_autosummary/settings/models_1.rst.txt
:orphan:

.. _models_1:

models
======

.. autoclass:: ansys.fluent.core.solver.settings_241.models_1.models
    :show-inheritance:

.. rubric:: Attributes

================================================   ==============================================================================================================================================================================================================

Attribute                                                                                                                                                                                                                                                 Summary

================================================   ==============================================================================================================================================================================================================
:ref:`multiphase <multiphase>`                                                                                                                                                                                                          Specify multiphase model.

:ref:`energy <energy>`                                                                                                                                                                                                 Enter the energy transport model settings.

:ref:`viscous <viscous>`                                                                                                                                                                                                                         'viscous' child.

:ref:`radiation <radiation>`                                                                                                                                                                                                                   'radiation' child.

:ref:`species <species>`                                                                                                                                                                                                                         'species' child.

:ref:`discrete_phase <discrete_phase>`                 Toplevel menu of the Discrete Phase multiphase model. A discrete phase model (DPM) is used when the aim is to investigate the behavior of the particles from a Lagrangian view and a discrete perspective.

:ref:`virtual_blade_model <virtual_blade_model>`                                                                                                                                                                                        Enter the vbm model menu.

:ref:`optics <optics>`                                                                                                                                                                                                               Enter the optics model menu.

:ref:`structure <structure>`                                                                                                                                                                                                                   'structure' child.

:ref:`ablation <ablation>`                                                                                                                                                                                                         Enable/disable ablation model.

:ref:`echemistry <echemistry>`                                                                                                                                                                                     Enter the potential/echemistry model settings.

:ref:`battery <battery>`                                                                                                                                                                                                                         'battery' child.

:ref:`system_coupling <system_coupling>`                                                                                                                                                                                    Enter the system coupling model menu.

:ref:`sofc <sofc>`                                                                                                                                                                                                                     Enter SOFC model settings.

================================================   ==============================================================================================================================================================================================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

